--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
     implementation 'com.auth0:java-jwt:4.4.0'
+    implementation 'com.aventrix.jnanoid:jnanoid:2.0.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -52,9 +53,9 @@ dependencies {
 
     if (isProdEnv) {
         runtimeOnly 'com.mysql:mysql-connector-j'
-        testRuntimeOnly 'com.h2database:h2'
+        testRuntimeOnly 'com.h2database:h2' // todo: TestContainer 로 변경
     } else {
-        runtimeOnly 'com.h2database:h2'
+        runtimeOnly 'com.h2database:h2' // todo: Docker 환경으로 변경
     }
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
