--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.3.0'
     id 'io.spring.dependency-management' version '1.1.5'
     id 'jacoco'
-    id "org.sonarqube" version "4.4.1.3373"
+    id 'org.sonarqube' version "5.1.0.4882"
 }
 
 group = 'com.loababa'
