--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'software.amazon.awssdk:s3:2.26.25'
 
     if (isProdEnv) {
         runtimeOnly 'com.mysql:mysql-connector-j'
