--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,3 +51,6 @@ aws:
     secret-key: ${AWS_IAM_SECRET_KEY}
   cloudfront:
     domain: ${AWS_CLOUDFRONT_DOMAIN_NAME}
+  s3:
+    bucket-name: ${AWS_S3_BUCKET_NAME}
+    public-bucket-prefix: ${AWS_PUBLIC_BUCKET_PREFIX}
