chore: 도메인 등록 및 CORS 허용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,3 +56,5 @@ aws:
   s3:
     bucket-name: ${AWS_S3_BUCKET_NAME}
     public-bucket-prefix: ${AWS_PUBLIC_BUCKET_PREFIX}
+
+domain: www.loababa.com
