--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,4 +57,6 @@ aws:
     bucket-name: ${AWS_S3_BUCKET_NAME}
     public-bucket-prefix: ${AWS_PUBLIC_BUCKET_PREFIX}
 
-domain: www.loababa.com
+domain:
+  front: www.loababa.com
+  back: api.loababa.com
