refactor: domain layer에 Repository에 Transaction 다 Adapter로 내림

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: loababa
 
+  aop:
+    proxy-target-class: true
+
   datasource:
     url: ${DATASOURCE_URL}
     username: ${DATASOURCE_USERNAME}
@@ -60,3 +63,5 @@ aws:
 domain:
   front: www.loababa.com
   back: api.loababa.com
+
+
