refactor: redirectUri를 외부에서 받도록 변경, spring docker compose 추가

--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,6 @@ jacoco {
     toolVersion = "0.8.12"
 }
 
-def isProdEnv = project.hasProperty('prod')
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -54,6 +52,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'org.springframework.boot:spring-boot-docker-compose'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testRuntimeOnly 'com.h2database:h2' // todo: TestContainer 로 변경
     testImplementation 'org.instancio:instancio-junit:4.7.0'
