chore: application.yml 수정 및 환경변수 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     open-in-view: true
     show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
@@ -34,21 +34,7 @@ discord:
   error-notification-webhook-url: ${DISCORD_ERROR_NOTIFICATION_WEBHOOK_URL}
   consulting-notification-webhook-url: ${DISCORD_CONSULTING_NOTIFICATION_WEBHOOK_URL}
 
-url:
-  lossam-sign-up: ${URL_LOSSAM_SIGN_UP}
-
 aws:
   iam:
     access-key: ${AWS_IAM_ACCESS_KEY}
     secret-key: ${AWS_IAM_SECRET_KEY}
-  cloudfront:
-    domain: ${AWS_CLOUDFRONT_DOMAIN_NAME}
-  s3:
-    bucket-name: ${AWS_S3_BUCKET_NAME}
-    public-bucket-prefix: ${AWS_PUBLIC_BUCKET_PREFIX}
-
-domain:
-  front: ${DOMAIN_FRONT}
-  back: ${DOMAIN_BACK}
-
-
